--- a/.gitignore
+++ b/.gitignore
@@ -18,12 +18,41 @@
 /public/storage
 /storage/*.key
 /storage/pail
+/storage/logs/*
+!/storage/logs/.gitkeep
+/storage/framework/cache/*
+!/storage/framework/cache/.gitkeep
+/storage/framework/sessions/*
+!/storage/framework/sessions/.gitkeep
+/storage/framework/testing/*
+!/storage/framework/testing/.gitkeep
+/storage/framework/views/*
+!/storage/framework/views/.gitkeep
 /vendor
 Homestead.json
 Homestead.yaml
 Thumbs.db
 
 .vercel
+
+# Large files and caches
+*.zip
+*.tar.gz
+*.rar
+composer.phar
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json.bak
+
+# OS files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Desktop.ini
 
 # GitHub Pages - keep docs folder
 !/docs
