Implement Composer installation in Vercel build process; update vercel.json and .vercelignore to manage temporary files and ensure successful dependency installation.

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
     "$schema": "https://openapi.vercel.sh/vercel.json",
     "outputDirectory": "public",
-    "buildCommand": "composer install --no-dev --optimize-autoloader --no-interaction && npm install && npm run build",
-    "installCommand": "composer install --no-dev --optimize-autoloader --no-interaction",
+    "buildCommand": "curl -sS https://getcomposer.org/installer | php && php composer.phar install --no-dev --optimize-autoloader --no-interaction && rm -f composer.phar && npm install && npm run build",
+    "installCommand": "curl -sS https://getcomposer.org/installer | php && php composer.phar install --no-dev --optimize-autoloader --no-interaction && rm -f composer.phar",
     "functions": {
         "api/lambda.php": {
             "runtime": "vercel-php@0.7.4",
