--- a/.vercelignore
+++ b/.vercelignore
@@ -9,7 +9,9 @@ node_modules/
 !.env.example
 .phpactor.json
 .phpunit.result.cache
+# composer.phar - Temporary file, akan dihapus setelah install
 composer.phar
+composer-setup.php
 
 # IDE files
 .idea/
