--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,7 @@
 {
+    "version": 2,
     "$schema": "https://openapi.vercel.sh/vercel.json",
+    "framework": null,
     "outputDirectory": "public",
     "buildCommand": "npm install && npm run build",
     "functions": {
