Update vercel.json to specify outputDirectory and correct routing paths for static assets, ensuring proper file serving in Vercel deployment.

--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,7 @@
     "version": 2,
     "$schema": "https://openapi.vercel.sh/vercel.json",
     "framework": null,
+    "outputDirectory": "public",
     "buildCommand": "npm install && npm run build",
     "functions": {
         "api/lambda.php": {
@@ -12,23 +13,23 @@
     "routes": [
         {
             "src": "/build/(.*)",
-            "dest": "/public/build/$1"
+            "dest": "/build/$1"
         },
         {
             "src": "/images/(.*)",
-            "dest": "/public/images/$1"
+            "dest": "/images/$1"
         },
         {
             "src": "/favicon.ico",
-            "dest": "/public/favicon.ico"
+            "dest": "/favicon.ico"
         },
         {
             "src": "/robots.txt",
-            "dest": "/public/robots.txt"
+            "dest": "/robots.txt"
         },
         {
             "src": "/(.*\\.(js|css|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot))",
-            "dest": "/public/$1"
+            "dest": "/$1"
         },
         {
             "src": "/(.*)",
